<resources>
    <string name="app_name">Kilimanjaro Food Orders</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="orderdate">01–01–1997</string>
    <string name="orderid">#0001</string>
    <string name="orderowner">Customer:</string>
    <string name="img">mychicken</string>
    <string name="myrestaurant">MyRestaurant</string>
    <string name="orders">Orders</string>
    <string name="dispatchedorders">Dispatched Orders</string>
    <string name="status">Status:</string>
    <string name="Pending">PENDING</string>
    <string name="createdat">Created at:</string>
    <string name="image">image</string>
    <string name="createdattime">Time created:</string>
    <string name="deliveredat">Delivered at:</string>
    <string name="deliveryplace">Delivery Place</string>
    <string name="paymentstatus">Payment Status:</string>
    <string name="paidstatus">Paid status</string>
    <string name="deliverycontact">Delivery Contact:</string>
    <string name="deliverynumber">Contact:</string>
    <string name="paymenttype">Payment Type:</string>
    <string name="paytype">Pay Type</string>
    <string name="dispatchbutton">Dispatch</string>
    <string name="canceldispatch">Cancel Dispatch</string>
    <string name="paidamount">Paid Amount:</string>
    <string name="amount">Amount</string>
    <string name="deliverycountry">Delivery Country:</string>
    <string name="country">Country</string>
    <string name="payableamount">Payable Amount:</string>
    <string name="payableamt">Payable Amount:</string>
    <string name="dispatchstatus">dispatch status</string>
    <string name="dispatch_status">Dispatch status:</string>
    <string name="phone_no">Phone Number</string>
    <string name="owneremailaddress">Client Email Address:</string>
    <string name="ownermail">owner mail</string>
    <string name="payment_reference">Payment Reference:</string>
    <string name="payref">Pay ref</string>
    <string name="delivery_charge">Delivery Charge:</string>
    <string name="deliverycharge">deliverycharge</string>
    <string name="dispatch_date">Dispatch Date:</string>
    <string name="dispatch_time">Dispatch Time:</string>
    <string name="payment_number">Payment Number:</string>
    <string name="pay_no">pay no</string>
    <string name="pendingorders">Pending Orders</string>
    <string name="cart">Cart</string>
    <string name="product_name">Product Name:</string>
    <string name="quantity">Quantity:</string>
    <string name="productname">productname</string>
    <string name="item_quantity">Item Quantity:</string>
    <string name="item_price">Item Price:</string>
    <string name="itempricing">itempricing</string>
    <string name="accompaniment">Accompaniment:</string>
    <string name="accompany">accompaniment</string>
    <string name="description">Description:</string>
    <string name="itemdescription">itemdescription</string>
    <string name="item">Item Number:</string>
    <string name="itemnumber">itemnumber</string>
    <string name="product_id">Product ID</string>
    <string name="prodid">prodid</string>
    <string name="accompaniment_id">Accompaniment ID</string>
    <string name="accompanimentid">accompanimentid</string>
    <string name="no_dispatched_orders">There Are No Dispatched Orders!</string>
    <string name="no_orders_availabile">There Are No Orders Available!</string>
    <string name="no_pending_orders">There are no Pending Orders!</string>
    <string name="product_attribute">Product Attribute:</string>
    <string name="attribute">attribute</string>
    <string name="order_total">Order Total:</string>
    <string name="total">Total:</string>
    <string name="address">Address:</string>
    <string name="delivery_address">Delivery Address:</string>
    <string name="order_date">Order Date:</string>
    <string name="delivery_details">Delivery Details:</string>
    <string name="accept">Accept</string>
    <string name="new_orders">New Orders</string>
    <string name="payment_details">Payment Details:</string>
    <string name="dispatched">DISPATCHED</string>
    <string name="email">Email</string>
    <string name="no_orders">There are no Orders</string>
</resources>
