<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="wrap_content"
    android:layout_margin="12dp"
    app:cardCornerRadius="3dp"
    android:elevation="300dp">

    <FrameLayout
        android:id="@+id/frame"
        android:layout_width="3dp"
        android:layout_height="match_parent"
        android:layout_marginEnd="1dp"
        android:background="#B60909"
        android:elevation="2dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:id="@+id/parent_layout"
        android:layout_height="wrap_content"
        android:background="@color/cardview_light_background"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="90dp"
            android:layout_marginEnd="90dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/orderid"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/orderid"
                android:fontFamily="sans-serif-black"
                android:textSize="19sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/schedule_image"
                android:layout_width="200dp"
                android:layout_height="90dp"
                android:layout_marginTop="5dp"
                android:layout_weight="0.4"
                android:src="@drawable/c"
                app:civ_border_color="#FF000000" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight=".6"
                android:orientation="vertical"
                app:layout_constraintCircleRadius="250dp">

                <TextView
                    android:id="@+id/deliveryadd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:gravity="start"
                    android:text="@string/address"
                    android:fontFamily="sans-serif-light"
                    android:textSize="18dp">

                </TextView>

                <TextView
                    android:id="@+id/orderowner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:layout_weight=".5"
                    android:fontFamily="sans-serif-condensed-light"
                    android:gravity="start"
                    android:text="@string/orderowner"
                    android:textSize="16dp" />

            </LinearLayout>


        </LinearLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_alignParentStart="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/ordertotal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:layout_weight=".5"
                    android:backgroundTint="@color/hound"
                    android:fontFamily="sans-serif-condensed-light"
                    android:gravity="start"
                    android:paddingStart="30dp"
                    android:textSize="16sp"
                    android:text="@string/order_total" />

            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/statusbg"
                android:layout_height="wrap_content"
                android:layout_width="90dp"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="7dp"
                android:backgroundTint="@color/colorAccent"
                android:orientation="horizontal"
                android:layout_marginTop="3dp"
                android:elevation="5dp"
                app:cardCornerRadius="10dp">

                <TextView
                    android:id="@+id/orderstatus"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/Pending"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/statusbgd"
                android:layout_width="90dp"
                android:layout_marginTop="3dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="7dp"
                android:elevation="5dp"
                android:backgroundTint="@color/hound"
                android:orientation="horizontal"
                app:cardCornerRadius="10dp">


                <TextView
                    android:id="@+id/orderstatusd"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/dispatched"
                    android:textColor="@android:color/white"
                    android:textSize="14sp"
                    android:textStyle="bold" />

            </androidx.cardview.widget.CardView>

        </RelativeLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight=".5"
                android:gravity="start"
                android:textStyle="bold"
                android:fontFamily="sans-serif-condensed-light"
                android:textSize="16sp"
                android:paddingStart="30dp"
                android:text="@string/order_date" />

            <TextView
                android:id="@+id/orderdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight=".5"
                android:gravity="end"
                android:fontFamily="sans-serif-condensed-light"
                android:textSize="16sp"
                android:paddingEnd="5dp"
                android:text="@string/orderdate" />
        </LinearLayout>





    </LinearLayout>


</com.google.android.material.card.MaterialCardView>